<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddMeetingActivity">
    
    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choisissez une date"
                android:layout_marginTop="50dp"
                android:textSize="20sp"/>

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                style="@style/date_picker_theme"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choisissez une heure de début"
                android:layout_marginTop="50dp"
                android:textSize="20sp"/>

            <TimePicker
                android:id="@+id/start_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choisissez une heure de fin"
                android:layout_marginTop="50dp"
                android:textSize="20sp"/>

            <TimePicker
                android:id="@+id/end_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choisissez une salle"
                android:layout_marginTop="50dp"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/room_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                />

            <EditText
                android:id="@+id/edit_text_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="Participants"
                />

            <EditText
                android:id="@+id/edit_text_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="Précisez le sujet de la réunion"
                />

            <Button
                android:id="@+id/save_meeting_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ajouter"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="30dp"/>




     </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>