<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/filter_by_date"
        android:title="by date"/>

    <item
        android:id="@+id/filter_by_location"
        android:title="by location"/>
</menu>